# EcoBank256

./: CMakeLists.txt  README.md  ecobank256.ini  main.c
.github/: FUNDING.yml
docs/: EcoBank256_Guide.md
include/: Blockchain.h  BlockchainExplorerData  BlockchainExplorerData.h  CryptoNote.h
include/Crypto/: BankCrypto.h
src/: Blockchain.cpp  account.h  address.c  address.h  blockchain.c  blockchain.h  cli.c  cli.h  main.c  main.cpp  mining.c  mining.h  mixing.c  network.c  network.h  version.cmake  version.h.in
src/Crypto/: BankCrypto.cpp: cpp
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp
src/include/: blockchain.h
ui/: map.html
